--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
         <form>
             <div class="form-group ">
                 <label class="float-right" for="exampleInputEmail1">שם נוסע</label>
-                <input  type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+                <input id="CDES"  type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
             </div>
             <br>
             <div class="form-group ">
                 <label class="float-right" for="exampleInputEmail1">כתובת</label>
-                <input  type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+                <input  id="ELIT_FULLADDRESS" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
             </div>
             <br>
             <div class="form-group ">
                 <label class="float-right" for="exampleInputEmail1">עיר</label>
-                <input  type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+                <input id="ELIT_CITYNAME" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
                 <small id="emailHelp" class="form-text text-muted float-right">באפשרותך לעדכן נתוני נוסע</small>
             </div>
             <br>
             <div class="form-group ">
                 <label class="float-right" for="exampleInputEmail1">סטאטוס תעודת משלוח</label>
-                <input  type="text" readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+                <input id="STATDES" type="text" readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
             </div>
             <br>
         </form>
@@ -137,9 +137,12 @@
         }
         xmlhttp.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
-                $('#table').bootstrapTable({
+                /*$('#table').bootstrapTable({
                     data: JSON.parse(this.responseText)
-                });
+                });*/
+                var response = JSON.parse(this.responseText);
+                var cdes = response[0]["CDES"]
+                document.getElementById("CDES").value = cdes;
 
             }
         };
