תיקון שמות שדות חיפוש CELL1 CELL2 הוספת עדכון לאבטחה נמוכה כי לא עבד תקין בשרת אמת

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="form-group ">
                     <label class="float-right" for="booknum">מספר השובר</label>
                     <div class="input-group">
-                    <input  type="text" class="form-control" id="booknum" aria-describedby="emailHelp" placeholder="ELAL123456" value="LY55972"/>
+                    <input  type="text" class="form-control" id="booknum" aria-describedby="emailHelp" placeholder="ELAL123456" value="SU43051"/>
                     <span class="input-group-addon"></span>
                     <input  type="text" class="form-control" id="docno" aria-describedby="emailHelp" placeholder="" value="" readonly/>
                     </div>
@@ -43,7 +43,7 @@
                 <br>
                 <div class="form-group span2">
                     <label class="float-right" for="cellphone">מספר טלפון נייד</label>
-                    <input type="text" class="form-control" id="cellphone" placeholder="0501234567" value="0523782066">
+                    <input type="text" class="form-control" id="cellphone" placeholder="0501234567" value="0505555308">
                 </div>
 
 
